--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuarantineCoffee">
         <activity
-            android:name=".Manager"
+            android:name=".activities.Manager.ManagerActivity"
             android:exported="true" />
         <activity
-            android:name=".Waiter"
+            android:name=".activities.Waiter.WaiterActivity"
             android:exported="true" />
         <activity
-            android:name=".Bartender"
+            android:name=".activities.Bartender.BartenderActivity"
             android:exported="true" />
         <activity
-            android:name=".Login"
+            android:name=".activities.LoginActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
