--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuarantineCoffee">
         <activity
+            android:name=".activities.Manager.ManageEmployeeActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.Manager.PromotionActivity"
             android:exported="true" />
         <activity
