--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuarantineCoffee">
         <activity
-            android:name=".activities.Manager.CreateOrUpdateActivity"
+            android:name=".activities.Manager.CreateEmployeeActivity"
             android:exported="true" />
         <activity
-            android:name=".activities.Manager.CUDActivity"
+            android:name=".activities.Manager.CUDEmployeeActivity"
             android:exported="true" />
         <activity
             android:name=".activities.Manager.ManageEmployeeActivity"
