--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuarantineCoffee">
         <activity
-            android:name=".activities.Manager.CreateOrUpdateActivity"
+            android:name=".activities.Manager.ShowList"
             android:exported="true" />
         <activity
-            android:name=".activities.Manager.CUDActivity"
-            android:exported="true" />
-        <activity
-            android:name=".activities.Manager.ManageEmployeeActivity"
+            android:name=".activities.Manager.ManageStaffActivity"
             android:exported="true" />
         <activity
             android:name=".activities.Manager.PromotionActivity"
