--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.microwaveteam.quarantinecoffee" >
+    package="com.microwaveteam.quarantinecoffee">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.QuarantineCoffee" >
+        android:theme="@style/Theme.QuarantineCoffee">
+        <activity
+            android:name=".activities.Manager.EmployeesTimeKeeperActivity"
+            android:exported="true" />
         <activity
             android:name=".activities.Manager.ShowProductInStatisticalActivity"
             android:exported="true" />
@@ -76,7 +79,7 @@
             android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
